--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Formulário de cadastro</title>
 </head>
 
-<body>
+<body class="b">
 
     <header class="cabeçalho">
         <div class="container">
@@ -101,6 +101,7 @@
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="cep">CEP</label>
                 <input name="cep" id="cep" class="campo__escrita" required />
+                <div id="erro"></div>
             </div>
 
             <div class="formulario__campo">
@@ -249,6 +250,7 @@
         </ul>
     </footer>
 <script src="app.js"></script>
+<!-- <script src="funcaoSemParametro.js"></script> -->
 </body>
 
 </html>
